--- a/packages/react-devtools/package.json
+++ b/packages/react-devtools/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-typescript": "^7.26.4",
     "@babel/types": "^7.26.0",
     "kolorist": "^1.8.0",
+    "launch-editor": "^2.9.1",
     "sirv": "^2.0.4",
     "unplugin": "^2.3.10"
   },
