feat: enhance React DevTools with new scripts, improved package configurations, and Storybook integration for UI components

--- a/package.json
+++ b/package.json
@@ -24,16 +24,22 @@
   },
   "scripts": {
     "stub:shared": "turbo stub --filter=./packages/shared",
+    "stub:core": "turbo stub --filter=./packages/react-devtools-core",
+    "stub:ui": "turbo stub --filter=./packages/react-devtools-ui",
     "stub:kit": "turbo stub --filter=./packages/react-devtools-kit",
     "stub:overlay": "turbo stub --filter=./packages/react-devtools-overlay",
     "stub:client": "turbo stub --filter=./packages/react-devtools-client",
+    "stub:devtools": "turbo stub --filter=./packages/react-devtools",
     "build:shared": "turbo build --filter=./packages/shared...",
+    "build:core": "turbo build --filter=./packages/react-devtools-core...",
+    "build:ui": "turbo build --filter=./packages/react-devtools-ui...",
     "build:kit": "turbo build --filter=./packages/react-devtools-kit...",
     "build:overlay": "turbo build --filter=./packages/react-devtools-overlay...",
     "build:client": "turbo build --filter=./packages/react-devtools-client...",
-    "build:react-devtools": "turbo build --filter=./packages/react-devtools...",
+    "build:devtools": "turbo build --filter=./packages/react-devtools...",
     "prepare:type": "turbo prepare:type --filter='./packages/*'",
-    "dev": "nr prepare:type && nr build:client && turbo stub --concurrency 20",
+    "dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" nr prepare:type && nr build:ui && nr build:client && turbo stub --concurrency 20",
+    "dev:ui-story": "turbo dev --filter=./packages/ui-story",
     "build": "turbo build",
     "lint": "NODE_OPTIONS=--import=tsx eslint --config=eslint.config.ts .",
     "lint:fix": "pnpm lint --fix",
