--- a/packages/react-devtools-ui/package.json
+++ b/packages/react-devtools-ui/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@react-devtools/ui",
-  "version": "0.0.1",
   "type": "module",
+  "version": "0.0.1",
   "description": "UI components library for React DevTools",
-  "author": "React DevTools Contributors",
+  "author": "wzc520pyfm",
   "license": "MIT",
   "exports": {
     ".": {
@@ -25,8 +25,10 @@
     "dist"
   ],
   "scripts": {
-    "build": "vite build && tsc --emitDeclarationOnly --outDir dist",
+    "build": "vite build",
     "dev": "vite build --watch",
+    "prepare:type": "tsc --emitDeclarationOnly --outDir dist",
+    "stub": "vite build --watch",
     "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
@@ -48,4 +50,3 @@
     "vite-plugin-dts": "catalog:"
   }
 }
-
