--- a/packages/react-devtools/tsconfig.json
+++ b/packages/react-devtools/tsconfig.json
@@ -4,8 +4,8 @@
     "composite": false,
     "target": "ESNext",
     "rootDir": "src",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "types": [
       "vite/client"
     ],
