feat: integrate React Scan into React DevTools, enhancing performance monitoring with new configuration options and UI components

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "stub:ui": "turbo stub --filter=./packages/react-devtools-ui",
     "stub:kit": "turbo stub --filter=./packages/react-devtools-kit",
     "stub:overlay": "turbo stub --filter=./packages/react-devtools-overlay",
+    "stub:scan": "turbo stub --filter=./packages/react-devtools-scan",
     "stub:client": "turbo stub --filter=./packages/react-devtools-client",
     "stub:devtools": "turbo stub --filter=./packages/react-devtools",
     "build:shared": "turbo build --filter=./packages/shared...",
@@ -35,6 +36,7 @@
     "build:ui": "turbo build --filter=./packages/react-devtools-ui...",
     "build:kit": "turbo build --filter=./packages/react-devtools-kit...",
     "build:overlay": "turbo build --filter=./packages/react-devtools-overlay...",
+    "build:scan": "turbo build --filter=./packages/react-devtools-scan...",
     "build:client": "turbo build --filter=./packages/react-devtools-client...",
     "build:devtools": "turbo build --filter=./packages/react-devtools...",
     "prepare:type": "turbo prepare:type --filter='./packages/*'",
