--- a/packages/playground/react-webpack/package.json
+++ b/packages/playground/react-webpack/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
+    "@react-devtools/scan": "workspace:*",
     "@react-devtools/ui": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
