feat: update React DevTools with enhanced React Scan integration, including performance metrics, toolbar visibility options, and improved event handling for component inspection

--- a/packages/react-devtools/package.json
+++ b/packages/react-devtools/package.json
@@ -17,6 +17,11 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
+    },
+    "./scan": {
+      "types": "./dist/scan.d.ts",
+      "import": "./dist/scan.js",
+      "require": "./dist/scan.cjs"
     }
   },
   "main": "./dist/index.cjs",
