refactor: optimize state management in App component using refs, improve cleanup logic in ScanPage, and enhance iframe URL generation with cache-busting timestamp

--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
     "dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" nr prepare:type && nr build:ui && nr build:client && turbo stub --concurrency 20",
     "dev:ui-story": "turbo dev --filter=./packages/ui-story",
     "build": "turbo build",
+    "clean": "pnpm clean:cache && pnpm clean:dist",
+    "clean:cache": "rm -rf .turbo node_modules/.cache packages/*/node_modules/.cache",
+    "clean:dist": "rm -rf packages/*/dist packages/*/build packages/*/storybook-static packages/playground/*/dist",
+    "clean:deps": "rm -rf node_modules packages/*/node_modules packages/playground/*/node_modules",
+    "clean:all": "pnpm clean:cache && pnpm clean:dist && pnpm clean:deps",
     "lint": "NODE_OPTIONS=--import=tsx eslint --config=eslint.config.ts .",
     "lint:fix": "pnpm lint --fix",
     "prepublishOnly": "npm run build",
