fix: update clean scripts in package.json to ensure commands succeed even if files do not exist

--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "dev:ui-story": "turbo dev --filter=./packages/ui-story",
     "build": "turbo build",
     "clean": "pnpm clean:cache && pnpm clean:dist",
-    "clean:cache": "rm -rf .turbo node_modules/.cache packages/*/node_modules/.cache",
-    "clean:dist": "rm -rf packages/*/dist packages/*/build packages/*/storybook-static packages/playground/*/dist",
-    "clean:deps": "rm -rf node_modules packages/*/node_modules packages/playground/*/node_modules",
+    "clean:cache": "rm -rf .turbo node_modules/.cache packages/*/node_modules/.cache || true",
+    "clean:dist": "rm -rf packages/*/dist packages/*/storybook-static packages/playground/*/dist || true",
+    "clean:deps": "rm -rf node_modules packages/*/node_modules packages/playground/*/node_modules || true",
     "clean:all": "pnpm clean:cache && pnpm clean:dist && pnpm clean:deps",
     "lint": "NODE_OPTIONS=--import=tsx eslint --config=eslint.config.ts .",
     "lint:fix": "pnpm lint --fix",
