chore: update Node.js engine requirement to >=14.0.0, adjust TypeScript target to ES2017 across multiple packages, and set build targets to node14 for consistency

--- a/packages/react-devtools/tsconfig.json
+++ b/packages/react-devtools/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "composite": false,
-    "target": "ESNext",
+    "target": "ES2017",
     "rootDir": "src",
     "module": "ESNext",
     "moduleResolution": "bundler",
