feat: enhance React DevTools with improved configuration options for client URL and root selector, update package dependencies, and refine build configurations for better compatibility with Webpack 4 and modern React versions

--- a/.gitignore
+++ b/.gitignore
@@ -114,5 +114,6 @@ storybook-static
 
 # react
 packages/react-devtools/src/overlay/**/*
+packages/react-devtools/client/**/*
 packages/react-devtools-client/dist/**/*
 packages/react-devtools-overlay/dist/**/*
