--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "prepare:type": "turbo prepare:type --filter='./packages/*'",
     "dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" nr prepare:type && nr build:ui && nr build:client && turbo stub --concurrency 20",
     "dev:ui-story": "turbo dev --filter=./packages/ui-story",
-    "build": "turbo build",
+    "build": "turbo build --filter='!./packages/playground/react17-scss' --filter='!./packages/playground/react17-webpack4'",
     "clean": "pnpm clean:cache && pnpm clean:dist",
     "clean:cache": "rm -rf .turbo node_modules/.cache packages/*/node_modules/.cache || true",
     "clean:dist": "rm -rf packages/*/dist packages/*/storybook-static packages/playground/*/dist || true",
