--- a/packages/playground/react17-webpack4/package.json
+++ b/packages/playground/react17-webpack4/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development",
@@ -25,6 +25,7 @@
     "@types/react-dom": "^17.0.25",
     "@types/react-router-dom": "^5.3.3",
     "babel-loader": "^8.2.5",
+    "copy-anything": "^4.0.5",
     "css-loader": "^5.2.7",
     "html-webpack-plugin": "^4.5.2",
     "react-devtools": "workspace:*",
