--- a/packages/react-devtools-overlay/package.json
+++ b/packages/react-devtools-overlay/package.json
@@ -30,6 +30,7 @@
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@vitejs/plugin-react": "catalog:",
+    "rollup-plugin-external-globals": "^0.13.0",
     "typescript": "catalog:",
     "vite": "catalog:"
   }
