--- a/packages/react-devtools/package.json
+++ b/packages/react-devtools/package.json
@@ -22,7 +22,8 @@
       "types": "./dist/scan.d.ts",
       "import": "./dist/scan.js",
       "require": "./dist/scan.cjs"
-    }
+    },
+    "./package.json": "./package.json"
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
@@ -34,10 +35,18 @@
     "stub": "tsup --watch --dts-only"
   },
   "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "vite": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0",
-    "webpack": "^5.0.0"
+    "webpack": "^4.0.0 || ^5.0.0"
+  },
+  "peerDependenciesMeta": {
+    "vite": {
+      "optional": true
+    },
+    "webpack": {
+      "optional": true
+    }
   },
   "dependencies": {
     "@babel/core": "^7.26.0",
@@ -46,13 +55,13 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.4",
     "@babel/types": "^7.26.0",
-    "@react-devtools/scan": "workspace:*",
     "kolorist": "^1.8.0",
     "launch-editor": "^2.9.1",
     "sirv": "^2.0.4",
     "unplugin": "^2.3.10"
   },
   "devDependencies": {
+    "@react-devtools/scan": "workspace:*",
     "tsup": "^8.3.5",
     "typescript": "^5.5.0"
   }
