feat: add my-devtools package with initial implementation of custom React DevTools plugins, including ContextInspector and integration with Vite for enhanced development experience

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "prepare": "simple-git-hooks",
     "test": "vitest --environment jsdom",
     "play": "turbo dev --filter=./packages/playground/react",
-    "play:webpack": "turbo dev --filter=./packages/playground/react-webpack"
+    "play:webpack": "turbo dev --filter=./packages/playground/react-webpack",
+    "play:my-devtools": "turbo dev --filter=./packages/playground/my-devtools-play"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.4.1",
