--- a/packages/playground/nextjs/package.json
+++ b/packages/playground/nextjs/package.json
@@ -12,12 +12,8 @@
     "next": "14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-devtools": "workspace:*",
-    "@react-devtools/overlay": "workspace:*",
-    "launch-editor": "^2.6.1",
-    "@babel/core": "^7.24.0",
-    "@babel/preset-react": "^7.24.0",
-    "@babel/preset-typescript": "^7.24.0"
+    "@react-devtools/nextjs": "workspace:*",
+    "react-devtools": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
