refactor: rename packages and update dependencies to use 'react-devtools-plus' across the project, enhancing consistency and clarity in package management

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/vuejs/devtools/issues"
   },
   "keywords": [
-    "react-devtools",
+    "react-devtools-plus",
     "dx"
   ],
   "engines": {
