--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-devtools/shared",
+  "name": "@react-devtools-plus/shared",
   "type": "module",
   "version": "0.0.1",
   "author": "wzc520pyfm",
