--- a/turbo.json
+++ b/turbo.json
@@ -1,51 +1,51 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
-    "@react-devtools/shared#stub": {
+    "@react-devtools-plus/shared#stub": {
       "cache": false
     },
-    "@react-devtools/kit#stub": {
+    "@react-devtools-plus/kit#stub": {
       "cache": false,
       "dependsOn": [
-        "@react-devtools/shared#stub",
-        "@react-devtools/shared#prepare:type"
+        "@react-devtools-plus/shared#stub",
+        "@react-devtools-plus/shared#prepare:type"
       ]
     },
-    "@react-devtools/core#stub": {
+    "@react-devtools-plus/core#stub": {
       "cache": false,
       "dependsOn": [
-        "@react-devtools/shared#stub",
-        "@react-devtools/shared#prepare:type"
+        "@react-devtools-plus/shared#stub",
+        "@react-devtools-plus/shared#prepare:type"
       ]
     },
-    "@react-devtools/client#build": {
+    "@react-devtools-plus/client#build": {
       "dependsOn": [
-        "@react-devtools/kit#build",
+        "@react-devtools-plus/kit#build",
         "^build"
       ],
       "outputs": [
         "dist/**"
       ]
     },
-    "@react-devtools/client#stub": {
+    "@react-devtools-plus/client#stub": {
       "cache": false,
       "dependsOn": [
-        "@react-devtools/kit#stub"
+        "@react-devtools-plus/kit#stub"
       ]
     },
-    "@react-devtools/overlay#build": {
+    "@react-devtools-plus/overlay#build": {
       "dependsOn": [
-        "@react-devtools/kit#build",
+        "@react-devtools-plus/kit#build",
         "^build"
       ],
       "outputs": [
         "dist/**"
       ]
     },
-    "@react-devtools/overlay#stub": {
+    "@react-devtools-plus/overlay#stub": {
       "cache": false,
       "dependsOn": [
-        "@react-devtools/kit#stub"
+        "@react-devtools-plus/kit#stub"
       ]
     },
     "react-devtools#build": {
