--- a/packages/playground/react-webpack/package.json
+++ b/packages/playground/react-webpack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-devtools/playground-react-webpack",
+  "name": "@react-devtools-plus/playground-react-webpack",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -7,8 +7,8 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "@react-devtools/scan": "workspace:*",
-    "@react-devtools/ui": "workspace:*",
+    "@react-devtools-plus/scan": "workspace:*",
+    "@react-devtools-plus/ui": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0"
@@ -20,7 +20,7 @@
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
-    "react-devtools": "workspace:*",
+    "react-devtools-plus": "workspace:*",
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4",
