--- a/packages/playground/react17-scss/package.json
+++ b/packages/playground/react17-scss/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-devtools/playground-react17-scss",
+  "name": "@react-devtools-plus/playground-react17-scss",
   "type": "module",
   "version": "0.0.0",
   "private": true,
@@ -12,7 +12,7 @@
     "preview": "NODE_ENV=test vite preview --mode test"
   },
   "dependencies": {
-    "@react-devtools/ui": "workspace:*",
+    "@react-devtools-plus/ui": "workspace:*",
     "@types/react-router-dom": "^5.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -22,7 +22,7 @@
     "@types/react": "^17.0.75",
     "@types/react-dom": "^17.0.25",
     "@vitejs/plugin-react": "^4.3.2",
-    "react-devtools": "workspace:*",
+    "react-devtools-plus": "workspace:*",
     "sass": "^1.83.4",
     "typescript": "^5.9.3",
     "vite": "^7.1.10"
