--- a/packages/playground/react17-webpack4/package.json
+++ b/packages/playground/react17-webpack4/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-devtools/playground-react17-webpack4",
+  "name": "@react-devtools-plus/playground-react17-webpack4",
   "version": "0.0.0",
   "private": true,
   "engines": {
@@ -25,7 +25,7 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^5.2.7",
     "html-webpack-plugin": "^4.5.2",
-    "react-devtools": "workspace:*",
+    "react-devtools-plus": "workspace:*",
     "sass": "^1.83.4",
     "sass-loader": "^10.5.2",
     "style-loader": "^2.0.0",
