--- a/packages/react-devtools-scan/package.json
+++ b/packages/react-devtools-scan/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@react-devtools/scan",
+  "name": "@react-devtools-plus/scan",
   "type": "module",
   "version": "0.0.1",
   "description": "React Scan integration for React DevTools",
   "keywords": [
     "react",
-    "react-devtools",
+    "react-devtools-plus",
     "react-scan",
     "performance",
     "profiler"
@@ -29,12 +29,12 @@
     "prepare:type": "tsc --declaration --emitDeclarationOnly --outDir dist"
   },
   "peerDependencies": {
-    "@react-devtools/core": "workspace:*",
+    "@react-devtools-plus/core": "workspace:*",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "peerDependenciesMeta": {
-    "@react-devtools/core": {
+    "@react-devtools-plus/core": {
       "optional": true
     }
   },
