--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,11 @@
     "module": "esnext",
     "moduleResolution": "bundler",
     "paths": {
-      "@react-devtools/shared": ["./packages/shared/src/index.ts"],
-      "@react-devtools/kit": ["./packages/react-devtools-kit/src/index.ts"],
-      "@react-devtools/client": ["./packages/react-devtools-client/src/index.ts"],
-      "@react-devtools/overlay": ["./packages/react-devtools-overlay/src/index.ts"],
-      "react-devtools": ["./packages/react-devtools/src/index.ts"]
+      "@react-devtools-plus/shared": ["./packages/shared/src/index.ts"],
+      "@react-devtools-plus/kit": ["./packages/react-devtools-kit/src/index.ts"],
+      "@react-devtools-plus/client": ["./packages/react-devtools-client/src/index.ts"],
+      "@react-devtools-plus/overlay": ["./packages/react-devtools-overlay/src/index.ts"],
+      "react-devtools-plus": ["./packages/react-devtools/src/index.ts"]
     },
     "resolveJsonModule": true,
     "types": [
