feat: add @iconify/react dependency and update icon handling in TabbedCodeBlock for improved visual representation

--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.2",
     "i18next": "^23.10.1",
     "lucide-react": "^0.556.0",
     "react": "^19.2.1",
