feat: refactor React DevTools integration across multiple components and update build scripts for improved performance and consistency

--- a/packages/react-devtools/package.json
+++ b/packages/react-devtools/package.json
@@ -9,14 +9,14 @@
       "require": "./dist/index.cjs"
     },
     "./vite": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "types": "./dist/vite.d.ts",
+      "import": "./dist/vite.js",
+      "require": "./dist/vite.cjs"
     },
     "./webpack": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "types": "./dist/webpack.d.ts",
+      "import": "./dist/webpack.js",
+      "require": "./dist/webpack.cjs"
     },
     "./scan": {
       "types": "./dist/scan.d.ts",
