--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "test": "vitest --environment jsdom",
     "play": "turbo dev --filter=./packages/playground/react",
     "play:react19": "turbo dev --filter=./packages/playground/react19",
+    "play:react17": "turbo dev --filter=./packages/playground/react17-webpack4",
     "play:webpack": "turbo dev --filter=./packages/playground/react-webpack",
     "play:my-devtools": "turbo dev --filter=./packages/playground/my-devtools-play"
   },
