feat: add Next.js playground for React DevTools Plus integration

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "dev": "NODE_OPTIONS=\"--max-old-space-size=8192\" nr prepare:type && nr build:ui && nr build:client && turbo stub --concurrency 20",
     "dev:ui-story": "turbo dev --filter=./packages/ui-story",
     "dev:docs": "pnpm -C docs dev",
-    "build": "turbo build --filter='!./packages/playground/react17-scss' --filter='!./packages/playground/react17-webpack4' --filter='!./docs'",
+    "build": "turbo build --filter='!./packages/playground/react17-scss' --filter='!./packages/playground/react17-webpack4' --filter='!./packages/playground/next' --filter='!./docs'",
     "clean": "pnpm clean:cache && pnpm clean:dist",
     "clean:cache": "rm -rf .turbo node_modules/.cache packages/*/node_modules/.cache || true",
     "clean:dist": "rm -rf packages/*/dist packages/*/storybook-static packages/playground/*/dist || true",
@@ -64,7 +64,9 @@
     "play:react19": "turbo dev --filter=./packages/playground/react19",
     "play:react17": "turbo dev --filter=./packages/playground/react17-webpack4",
     "play:webpack": "turbo dev --filter=./packages/playground/react-webpack",
-    "play:my-devtools": "turbo dev --filter=./packages/playground/my-devtools-play"
+    "play:my-devtools": "turbo dev --filter=./packages/playground/my-devtools-play",
+    "play:next": "turbo dev --filter=./packages/playground/next",
+    "play:next:turbo": "pnpm --filter @react-devtools-plus/playground-next dev:turbo"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.4.1",
