chore: add changelog configuration and update release scripts to generate CHANGELOG.md

--- a/package.json
+++ b/package.json
@@ -52,11 +52,12 @@
     "lint": "NODE_OPTIONS=--import=tsx eslint --config=eslint.config.ts .",
     "lint:fix": "pnpm lint --fix",
     "prepublishOnly": "npm run build",
-    "release": "bumpp && nr build && pnpm -r publish --access public",
-    "release:patch": "bumpp patch && nr build && pnpm -r publish --access public",
-    "release:minor": "bumpp minor && nr build && pnpm -r publish --access public",
-    "release:major": "bumpp major && nr build && pnpm -r publish --access public",
-    "release:beta": "bumpp prerelease && nr build && pnpm -r publish --access public --tag beta",
+    "changelog": "changelogen --output CHANGELOG.md",
+    "release": "changelogen --output CHANGELOG.md --no-commit && bumpp && nr build && pnpm -r publish --access public",
+    "release:patch": "changelogen --output CHANGELOG.md --no-commit && bumpp patch && nr build && pnpm -r publish --access public",
+    "release:minor": "changelogen --output CHANGELOG.md --no-commit && bumpp minor && nr build && pnpm -r publish --access public",
+    "release:major": "changelogen --output CHANGELOG.md --no-commit && bumpp major && nr build && pnpm -r publish --access public",
+    "release:beta": "changelogen --output CHANGELOG.md --no-commit && bumpp prerelease && nr build && pnpm -r publish --access public --tag beta",
     "prepare": "simple-git-hooks",
     "test": "vitest --environment jsdom",
     "play": "turbo dev --filter=./packages/playground/react",
@@ -86,6 +87,7 @@
     "@unocss/eslint-plugin": "^66.5.4",
     "archiver": "^7.0.1",
     "bumpp": "^10.3.1",
+    "changelogen": "^0.6.2",
     "cross-env": "^10.1.0",
     "degit": "^2.8.4",
     "eslint": "^9.37.0",
