chore(release): update release scripts to include prerelease checks before publishing

--- a/package.json
+++ b/package.json
@@ -53,11 +53,12 @@
     "lint:fix": "pnpm lint --fix",
     "prepublishOnly": "npm run build",
     "changelog": "changelogen --output CHANGELOG.md",
-    "release": "changelogen --output CHANGELOG.md --no-commit && bumpp && pnpm -r publish --access public",
-    "release:patch": "changelogen --output CHANGELOG.md --no-commit && bumpp patch && pnpm -r publish --access public",
-    "release:minor": "changelogen --output CHANGELOG.md --no-commit && bumpp minor && pnpm -r publish --access public",
-    "release:major": "changelogen --output CHANGELOG.md --no-commit && bumpp major && pnpm -r publish --access public",
-    "release:beta": "changelogen --output CHANGELOG.md --no-commit && bumpp prerelease && pnpm -r publish --access public --tag beta",
+    "prerelease": "npm whoami || (echo '❌ npm not logged in. Please run: npm login' && exit 1)",
+    "release": "pnpm prerelease && changelogen --output CHANGELOG.md --no-commit && bumpp && pnpm -r publish --access public",
+    "release:patch": "pnpm prerelease && changelogen --output CHANGELOG.md --no-commit && bumpp patch && pnpm -r publish --access public",
+    "release:minor": "pnpm prerelease && changelogen --output CHANGELOG.md --no-commit && bumpp minor && pnpm -r publish --access public",
+    "release:major": "pnpm prerelease && changelogen --output CHANGELOG.md --no-commit && bumpp major && pnpm -r publish --access public",
+    "release:beta": "pnpm prerelease && changelogen --output CHANGELOG.md --no-commit && bumpp prerelease && pnpm -r publish --access public --tag beta",
     "prepare": "simple-git-hooks",
     "test": "vitest --environment jsdom",
     "play": "turbo dev --filter=./packages/playground/react",
