feat: support rpc for plugin (#18)
* feat: add network monitoring plugin for React DevTools Plus

* feat: integrate sample and network plugins with RPC capabilities in React DevTools Plus

* feat: enhance flashBackground function to prevent multiple triggers and restore original background color

* feat: enhance plugin setup to support cleanup functions in React DevTools API

* feat: enhance HTML injection capabilities in React DevTools API

* feat: introduce plugin extend configuration for enhanced customization in React DevTools API

* fix: handle undefined tagName and improve className extraction for SVG elements in click event logging

* feat: add support for host plugins in React DevTools API integration

--- a/packages/playground/react-webpack/package.json
+++ b/packages/playground/react-webpack/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.28.4",
     "@babel/preset-react": "^7.28.4",
     "@babel/preset-typescript": "^7.28.4",
+    "@react-devtools-plus/sample-plugin": "workspace:*",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
