--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "dev:docs": "pnpm -C docs dev",
     "build": "turbo build --filter='!./packages/playground/*' --filter='!./docs'",
     "clean": "pnpm clean:cache && pnpm clean:dist",
-    "clean:cache": "rm -rf .turbo node_modules/.cache; find packages -maxdepth 3 -type d -name '.cache' -exec rm -rf {} + 2>/dev/null; true",
+    "clean:cache": "rm -rf .turbo node_modules/.cache; find packages -maxdepth 4 -type d -name '.cache' -exec rm -rf {} + 2>/dev/null; find packages -maxdepth 4 -type d -name '.vite' -exec rm -rf {} + 2>/dev/null; true",
     "clean:dist": "find packages -maxdepth 2 -type d -name 'dist' -exec rm -rf {} + 2>/dev/null; find packages -maxdepth 2 -type d -name 'storybook-static' -exec rm -rf {} + 2>/dev/null; true",
     "clean:deps": "rm -rf node_modules; find packages -maxdepth 2 -type d -name 'node_modules' -exec rm -rf {} + 2>/dev/null; true",
     "clean:all": "pnpm clean:cache && pnpm clean:dist && pnpm clean:deps",
